# gha-py-app

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/gha_py_app/: __init__.py
tests/unit/: test_main.py
